--- a/pacgroup8/DESCRIPTION
+++ b/pacgroup8/DESCRIPTION
@@ -7,9 +7,10 @@ Authors@R: c(
     person("Chin-Hung", "Huang", role = "aut"),
     person("Muhammad", "Umer", role = "aut")
     )
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: Tonghui Li<tzl0065@auburn.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.1
