--- a/finalgroup8/DESCRIPTION
+++ b/finalgroup8/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: finalgroup8
+Package: group8
 Type: Package
 Title:  implementing logistic regression using numerical optimization
 Version: 0.1.0
@@ -8,9 +8,14 @@ Authors@R: c(
     person("Muhammad", "Umer", role = "aut")
     )
 Maintainer: Tonghui Li<tzl0065@auburn.edu>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: 
+    1. Initial coefficient vector
+    2. Bootstrap Confidence intervals
+    3. The fitted logistic curve
+    4. Confusion Matrix
+    5.Prevalence, Accuracy, Sensitivity, Specificity, False Discovery Rate,Diagnostic Odds Ratio
+    6. The evaluation chart of the metrics with different cut-off values.
+License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
