--- a/finalgroup8/DESCRIPTION
+++ b/finalgroup8/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: group8
+Package: finalgroup8
 Type: Package
 Title:  implementing logistic regression using numerical optimization
 Version: 0.1.0
