--- a/finalgroup8/NAMESPACE
+++ b/finalgroup8/NAMESPACE
@@ -10,5 +10,6 @@ export(confusion_matrix)
 export(estBeta)
 export(initialbeta)
 export(interval)
+export(logiplot)
 export(optimizing)
 export(prevalencegrid)
